argocd/raw-manifests/local-staging/ollama-mcp/ollama/virtual-service-ui.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: ollama-staging-vs
  namespace: istio-system
spec:
  hosts:
    - "ollama.staging.local"
  gateways:
    - istio-ingressgateway-staging
  http:
    - route:
        - destination:
            host: ollama-staging.ollama.svc.cluster.local
            port:
              number: 11434
